# de-textbook

./: .gitignore  01_SCRE_DE_Textbook.ipynb  02_SCRE_Risk_Assessment.ipynb  02_SCRE_System_Description.ipynb  03_SCRE_Risk_Assessment.ipynb  03_SCRE_Vulnerability_Assessment.ipynb  04_SCRE_Vulnerability_Assessment.ipynb  05_SCRE_Resilience_Architecture.ipynb  INSTALL.md  LICENSE  Project_Export.ipynb  README.md  jupyter-lite.json  requirements.txt
.github/workflows/: deploy.yml
api/contents/: all.json
chapters/: 00.DE-Textbook.TOC.ipynb  01_SCRE_DE_Textbook.ipynb
chapters/01-intro/: 01.DE-Introduction.ipynb  02.DE-Case-Study-Introduction.ipynb  02_SCRE_Risk_Assessment.ipynb
content/: 01_SCRE_DE_Textbook.ipynb  05_SCRE_Resilience_Architecture.ipynb
drawio/: digital-engineering.drawio  mission-aware.drawio.xml
files/: 02_SCRE_System_Description.ipynb  03_SCRE_Risk_Assessment.ipynb  04_SCRE_Vulnerability_Assessment.ipynb
manb/: BUILD.md  LICENSE  MODELING.md  README.md  setup.cfg
manb/src/manb/: __init__.py  arch.py  comp.py  cs.py  env.py  ex.py  export.py  gfile.py  item.py  log.py  msc.py  pr.py  puml.py  ra.py  req.py  sd.py  va.py
projects/: projects.json
projects/pl/: entities.json  entitiesDict.json  entitiesForTypeList.json  id2nEntityDict.json  n2idRelDict.json  structures.json
projects/sf/: entities.json  entitiesDict.json  entitiesForTypeList.json  id2nEntityDict.json  id2nRelDict.json  n2idEntityDict.json  n2idRelDict.json  structures.json
