[metadata]
name = manb
version = 0.0.20
author = Virginia Tech
author_email = info@mission-aware.net
description = Mission Aware Notebook
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/tsherburne/de-textbook
project_urls =
    Bug Tracker = https://github.com/tsherburne/de-textbook/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    plantuml
    requests

[options.packages.find]
where = src